--- a/qianyv-bytehub-subject/qianyv-bytehub-subject-starter/pom.xml
+++ b/qianyv-bytehub-subject/qianyv-bytehub-subject-starter/pom.xml
@@ -17,4 +17,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.qianyv</groupId>
+            <artifactId>qianyv-bytehub-subject-application-controller</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+    </dependencies>
+
+
 </project>
