整合minio、阿里云oss，结合动态配置灵活切换业务

--- a/qianyv-bytehub-subject/qianyv-bytehub-subject-starter/src/main/resources/application.yml
+++ b/qianyv-bytehub-subject/qianyv-bytehub-subject-starter/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
 
 spring:
   application:
-    name: jc-club-subject
+    name: qianyv-bytehub-subject
   datasource:
     username: root
     password: 123456
