搭建好用户服务，完成鉴权整体流程

--- a/qianyv-bytehub-gateway/src/main/resources/application.yml
+++ b/qianyv-bytehub-gateway/src/main/resources/application.yml
@@ -14,11 +14,14 @@ spring:
     gateway:
       routes:
         - id: oss
-          uri: lb://jc-club-oss
+          uri: lb://qianyv-bytehub-oss
           predicates:
             - Path=/oss/**
         - id: subject
-          uri: lb://jc-club-subject
+          uri: lb://qianyv-bytehub-subject
           predicates:
             - Path=/subject/**
-
+        - id: subject
+          uri: lb://qianyv-bytehub-auth
+          predicates:
+            - Path=/auth/**
